bpk-lib/crates/macbat/macros/tests/trybuild_negative/projection_handler_wrong_signature.stderr
error[E0433]: cannot find `batpak` in the crate root
 --> tests/trybuild_negative/projection_handler_wrong_signature.rs:5:10
  |
5 | #[derive(Projection)]
  |          ^^^^^^^^^^ could not find `batpak` in the list of imported crates
  |
  = note: this error originates in the derive macro `Projection` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0425]: cannot find type `JsonValueInput` in this scope
 --> tests/trybuild_negative/projection_handler_wrong_signature.rs:6:18
  |
6 | #[batpak(input = JsonValueInput)]
  |                  ^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find type `Incremented` in this scope
 --> tests/trybuild_negative/projection_handler_wrong_signature.rs:7:18
  |
7 | #[batpak(event = Incremented, handler = wrong)]
  |                  ^^^^^^^^^^^ not found in this scope
